# my-web-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/my_web_app/: config.py  main.py
tests/: test_main.py
