[project]
name = "my-web-app"
version = "0.1.0"
description = "A FastAPI web application with full CI/CD pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "pi3plin3", email = "user@example.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
my-web-app = "my_web_app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_web_app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=my_web_app --cov-report=term-missing"
asyncio_mode = "auto"

[tool.bandit]
targets = ["src"]
